--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <div class="outside">
 
   <div class="inside">
+    <img src="assets/images/bild5.jpg" class="picture">
     <p class="name">Zeynep Veziroglu</p>
   <p class="city">Ängelholm, Skåne</p>
   <p class="description">"Computer Engineering student at Lund University."</p>
@@ -23,9 +24,6 @@
 
   </div>
 </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+
 </body>
 </html>
