--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <title>Frontend Mentor | Social links profile</title>
 
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 <div class="outside">
@@ -19,8 +19,10 @@
   <p class="city">Ängelholm, Skåne</p>
   <p class="description">"Computer Engineering student at Lund University."</p>
 
-  <a class="github" href="https://github.com/Zeynepvez" target="_blank">GitHub</a>
-    <a class="linkedin" href="https://www.linkedin.com/in/zeynep-veziroglu-2a145028b/" target="_blank"> LinkedIn</a>
+  <a class="github" href="https://github.com/Zeynepvez" target="_blank">
+    <i class="fa-brands fa-github"></i> GitHub</a>
+    <a class="linkedin" href="https://www.linkedin.com/in/zeynep-veziroglu-2a145028b/" target="_blank">
+      <i class="fab fa-linkedin"></i> LinkedIn</a>
 
   </div>
 </div>
